public interface SudokuChecker {
    void verify(int[][] board) throws InterruptedException;
}
